# ts-sqlite-vibe

./: Cargo.toml  PERFORMANCE.md  README.md  dockerfile  project_summary.md
examples/client_app/: Cargo.toml  deploy.sh  docker-compose.yml  dockerfile
examples/client_app/src/: dashboard.rs  main.rs  models.rs
examples/client_app/static/: charts.js
migrations/: 001_initial_schema.sql
src/: main.rs
src/api/: mod.rs  readings.rs  sensors.rs  sessions.rs  system.rs
src/db/: migrations.rs  mod.rs  schema.rs
src/models/: mod.rs  reading.rs  sensor.rs  session.rs
src/utils/: csv.rs  error.rs  mod.rs  test_utils.rs  tests
tools/: cargo.toml  load_test.rs
